@@ -1,124 +1,41 @@
-package Test::HTTPStatus;
 use strict;
 use warnings;
+use ExtUtils::MakeMaker;
 
-=encoding utf8
-
-=head1 The build file for Test::HTTPStatus
-
-This build file is a modulino; it works as both a build script and
-a module.
-
-To build the distribution, run this file normally:
-
-	% perl Makefile.PL
-
-But, it's more interesting than that. You can load it with C<require>
-and call C<arguments> to get the data structure it passes to
-C<WriteMakefile>:
-
-	my $package = require '/path/to/Makefile.PL';
-	my $arguments = $package->arguments;
-
-Note that C<require>-ing a file makes an entry in C<%INC> for exactly
-that name. If you try to C<require> another file with the same name,
-even from a different path, C<require> thinks it has already loaded
-the file. As such, I recommend you always require the full path to the
-file.
-
-The return value of the C<require> is a package name (in this case,
-the name of the main module. Use that to call the C<arguments> method.
-
-Even if this distribution needs a higher version of Perl, this bit
-only needs v5.8. You can play with the data structure with a primitive
-Perl.
-
-=cut
-
-use File::Spec::Functions qw(catfile);
-
-my $module    = __PACKAGE__;
-( my $dist = $module ) =~ s/::/-/g;
-
-my $github    = 'https://github.com/nigelhorne/Test-HTTPStatus';
-my $main_file = catfile( 'lib', split /::/, "$module.pm" );
-
-my $dist_args = {
+my $dist = {
 	COMPRESS => 'gzip -9f',	# Compress tarball using gzip
 	SUFFIX => 'gz',	# File suffix for tarball
 };
 
 if($^O eq 'darwin') {
-	$dist_args->{'TAR'} = 'gtar';
+	$dist->{'TAR'} = 'gtar';
 }
 
-my %WriteMakefile = (
-	'MIN_PERL_VERSION' => '5.010',
-
-	'NAME'          => $module,
-	'ABSTRACT_FROM' => $main_file,
-	'VERSION_FROM'  => $main_file,
-	'LICENSE'		=> 'artistic_2',
-	'AUTHOR'		=> 'brian d foy <bdfoy@cpan.org>',
-
-	'CONFIGURE_REQUIRES' => {
-		'ExtUtils::MakeMaker'   => '6.64',
-		'File::Spec::Functions' => '0',
-		},
-
-	'BUILD_REQUIRES' => {
-		},
-
-	'TEST_REQUIRES' => {
-		'Test::Builder::Module'    => 0,
-		'Test::DescribeMe' => 0,
-		'Test::Most'       => 0,
-		'Test::Needs' => 0
-	}, 'PREREQ_PM'     => {
-		'Carp'                     => '0',
-		'HTTP::SimpleLinkChecker'  => '1.165',
-		'Mojolicious'              => '6', # HTTP::SimpleLinkChecker already uses this
-		'Mojo::URL'                => '0', # doesn't specify a version, hence the above line
-	}, 'META_MERGE' => {
-		'meta-spec' => { version => 2 },
-		resources => {
-			repository => {
-				type => 'git',
-				url  => "$github.git",
-				web  => $github,
-				},
-			bugtracker => {
-				web    => "$github/issues",
-				},
-			homepage => $github,
-			},
-		},
-
-	clean => { FILES => "$dist-*" },
-	dist => $dist_args,
+WriteMakefile(
+    NAME         => 'Test::HTTPStatus',
+    VERSION_FROM => 'lib/Test/HTTPStatus.pm', # Automatically extracts $VERSION
+    ABSTRACT     => 'Test HTTP status codes of URLs',
+    AUTHOR       => 'brian d foy <bdfoy@cpan.org>, Nigel Horne <njh@bandsman.co.uk>',
+    LICENSE      => 'artistic_2',
+    PREREQ_PM    => {                       # Required dependencies
+        'HTTP::SimpleLinkChecker' => 0,     # Specify minimum version if needed
+        'Mojo::URL'              => 0,
+        'Test::Builder::Module'  => 0,
+        'Carp'                   => 0,
+        'warnings'               => 0,
+    },
+    TEST_REQUIRES => {                      # Dependencies needed for testing
+        'Test::More'             => 0,
+    },
+    META_MERGE    => {                      # Additional metadata
+        resources => {
+            homepage   => 'https://metacpan.org/release/Test-HTTPStatus',
+            bugtracker => 'https://rt.cpan.org/NoAuth/Bugs.html?Dist=Test-HTTPStatus',
+            repository => 'https://github.com/username/Test-HTTPStatus', # Update as necessary
+        },
+    },
+    EXE_FILES    => [],                     # Executable scripts (if any)
+    MIN_PERL_VERSION => '5.10.1',           # Minimum Perl version
+    clean        => { FILES => 'Test-HTTPStatus-*' }, # Files to clean
+    dist => $dist
 );
-
-
-sub arguments { \%WriteMakefile }
-
-do_it() unless caller;
-sub do_it {
-	require File::Spec;
-	my $MM ='ExtUtils::MakeMaker';
-	my $MM_version =
-		eval{ "$MM " . $WriteMakefile{'CONFIGURE_REQUIRES'}{'ExtUtils::MakeMaker'} }
-			||
-		"$MM 6.64";
-	eval "use $MM_version; 1" or die "Could not load $MM_version: $@";
-	eval "use Test::Manifest 1.21"
-		if -e File::Spec->catfile( qw(t test_manifest) );
-
-	my $arguments = arguments();
-	my $minimum_perl = $arguments->{MIN_PERL_VERSION} || '5.008';
-	eval "require $minimum_perl;" or die $@;
-
-	WriteMakefile( %$arguments );
-}
-
-no warnings;
-__PACKAGE__;
