@@ -1,115 +1,0 @@
-=pod
-
-=encoding utf8
-
-=for HTML <a href="https://travis-ci.org/briandfoy/test-httpstatus"><img src="https://travis-ci.org/briandfoy/test-httpstatus.svg?branch=master" /></a>
-
-=for HTML <a href='https://ci.appveyor.com/project/briandfoy/test-httpstatus'><img src='https://ci.appveyor.com/api/projects/status/mtv6s8ix64bh7h44' /></a>
-
-=for HTML <a href='https://coveralls.io/github/briandfoy/test-httpstatus?branch=master'><img src='https://coveralls.io/repos/github/briandfoy/test-httpstatus/badge.svg?branch=master' alt='Coverage Status' /></a>
-
-=for HTML <a href="https://github.com/briandfoy/test-httpstatus/blob/master/LICENSE"><img src="https://img.shields.io/cpan/l/Test-HTTPStatus.svg" /></a>
-
-=for HTML <a href="https://metacpan.org/pod/Test::HTTPStatus"><img src="https://img.shields.io/cpan/v/Test-HTTPStatus.svg" /></A>
-
-=head1 The Test::HTTPStatus module
-
-This is the I<README> for the L<Test::HTTPStatus> Perl module. You're probably
-looking at this because you don't know where else to find what you're
-looking for. Read this once and you might never have to read one again
-for any Perl module.
-
-=head2 Documentation
-
-To read about L<Test::HTTPStatus>, look at the embedded documentation
-in the module itself. Inside the distribution, you can format it
-with L<perldoc|https://perldoc.perl.orgperldoc.html>:
-
-	% perldoc lib/Test/HTTPStatus.pm
-
-If you have already installed the module, you can specify the module
-name instead of the file location:
-
-	% perldoc Test::HTTPStatus
-
-You can read the documentation and inspect the meta data at
-L<MetaCPAN|https://metacpan.org/pod/Test::HTTPStatus>.
-
-The standard module documentation has example uses in the SYNOPSIS
-section, but you can also look in the I<examples/> directory (if it's
-there), or look at the test files in I<t/>.
-
-=head2 Installation
-
-You can install this module with a CPAN client, which will resolve
-and install the dependencies:
-
-	% cpan Test::HTTPStatus
-	% cpanm Test::HTTPStatus
-
-You can also install directly from the distribution directory, which
-will also install the dependencies:
-
-	% cpan .
-	% cpanm .
-
-You could install just this module manually:
-
-	% perl Makefile.PL
-	% make
-	% make test
-	% make install
-
-You probably don't want to do that unless you're fiddling with the
-module and only want to run the tests without installing anything.
-
-=head2 Source location
-
-The meta data, such as the source repository and bug tracker, is in
-I<Makefile.PL> or the I<META.*> files it creates. You can find that on
-those CPAN web interfaces, but you can also look at files directly in
-the source repository:
-
-=over 4
-
-=item *	L<https://github.com/briandfoy/test-httpstatus>
-
-=back
-
-If you find a problem, file a ticket in the L<issue
-tracker|https://github.com/briandfoy/Test-HTTPStatus/issues>:
-
-=over 4
-
-=item *	L<https://github.com/briandfoy/test-httpstatus/issues>
-
-=back
-
-=head2 Getting help
-
-Although I'm happy to hear from module users in private email,
-that's the best way for me to forget to do something.
-
-Besides the issue trackers, you can find help at
-L<Perlmonks|http://www.perlmonks.org> or
-L<Stackoverflow|http://www.stackoverflow.com>, both of which have many
-competent Perlers who can answer your question, almost in real time.
-They might not know the particulars of this module, but they can help
-you diagnose your problem.
-
-You might like to read L<brian's Guide to Solving Any Perl
-Problem|http://archive.oreilly.com/pub/a/perl/excerpts/9780596527242/brians-guide.html>.
-
-=head2 Copyright and License
-
-You should have received a I<LICENSE> file, but the license is also noted
-in the module files. About the only thing you can't do is pretend that
-you wrote code that you didn't.
-
-=head2 Good luck!
-
-Enjoy,
-
-brian d foy, bdfoy@cpan.org
-
-=cut
