@@ -4,6 +4,7 @@ Revision history for Perl module Test::HTTPStatus
 	Apache::Constants no longer exists
 	Use gtar to create a distribution on Macs
 	Rewrite the documentation
+	Simplify Makefile.PL
 
 2.05	Sat Nov 14 09:53:52 EST 2020
 	No changes to the code, new maintainer - thanks to BDFOY
